classDiagram
direction LR

%% =========================
%% User hierarchy
%% =========================
class User {
  <<abstract>>
  +string username
  +string displayName
  +string email
  +string password
  +string phone
  +string role
  +number status
  +dangKyTaiKhoan()
  +dangNhap()
}

class Customer {
  <<abstract>>
  +string[] liked
  +boolean followed
  +string address
  +string cityName
  +string districtName
  +string wardName
  +xemGioHang()
  +datHang()
  +vietBinhLuan()
}

class Seller {
  <<abstract>>
  +string address
  +string cityName
  +string districtName
  +string wardName
  +string businessLicensePdfUrl
  +string[] likedBy
  +number numberFolower
  +quanLySanPham()
  +nhapHang()
  +traLoiChat()
  +xemThongTinShop()
}

class Admin {
  <<abstract>>
  +xemBaoCao()
  +duyetNoiDung()
}

User <|-- Customer
User <|-- Seller
User <|-- Admin

%% =========================
%% Product & catalog
%% =========================
class Product {
  +string productName
  +string shopID
  +string thumbnail
  +number currentPrice
  +number inStock
  +boolean active
  +string cat
  +boolean isOcop
  +number star
  +taoMoi()
  +capNhat()
  +kichHoat()
  +xoa()
  +timKiem()
}

class Category {
  +string code
  +string name
  +number status
  +taoDanhMuc()
  +lietKeDanhMuc()
  +capNhatDanhMuc()
  +xoaDanhMuc()
}

class GoodReceipt {
  +string name
  +string productId
  +number quantity
  +Date importedDate
  +string shopId
  +Date expirationDate
  +taoPhieuNhap()
  +lietKePhieuNhap()
  +capNhatPhieuNhap()
  +xoaPhieuNhap()
}

%% =========================
%% Shopping flow
%% =========================
class Cart {
  +string userId
  +themSanPham()
  +xoaSanPham()
  +capNhatSoLuong()
  +xoaGio()
  +xemGio()
}

class CartItem {
  +string productId
  +number quantity
}

class Order {
  +string orderNumber
  +string buyerId
  +string buyerName
  +string buyerPhone
  +string toAddress
  +number total
  +number status
  +string shipperId
  +taoDon()
  +xemDon()
  +capNhatTrangThai()
  +banGiaoVanChuyen()
  +huyDon()
  +xemDonCuaToi()
}

class OrderItem {
  +string productId
  +string productName
  +number quantity
  +number lineTotal
}

class OrderTracking {
  +number status
  +string desc
  +Date time
}

class ShippingInfo {
  +string carrierName
  +string trackingCode
  +Date handedOverAt
}

%% =========================
%% Content & interaction
%% =========================
class Comment {
  +string userId
  +string productId
  +string content
  +number rating
  +themBinhLuan()
  +xemBinhLuanTheoSanPham()
  +capNhatBinhLuan()
  +xoaBinhLuan()
}

class Post {
  +string title
  +string thumbnail
  +string content
  +string userId
  +string productId
  +number status
  +dangBai()
  +suaBai()
  +xoaBai()
  +xemBaiTheoNguoiDang()
  +lietKeBaiViet()
}

class Chat {
  +string customerId
  +string shopId
  +string lastMessage
  +Date lastMessageTime
  +moHoiThoai()
  +xemDanhSachHoiThoai()
}

class Message {
  +string chatId
  +string sender
  +string text
  +guiTinNhan()
}

class Report {
  +number visitorsCount
  +number totalProducts
  +number totalOrders
  +number successOrders
  +number successValue
  +xemThongKe()
}

%% =========================
%% Relationships
%% =========================
Seller "1" --> "0..*" Product : sở hữu
Seller "1" --> "0..*" GoodReceipt : nhập
Seller "1" --> "0..*" Chat : nhận

Customer "1" --> "0..*" Cart : sở hữu
Customer "1" --> "0..*" Comment : viết
Customer "1" --> "0..*" Chat : khởi tạo
Customer "1" --> "0..*" Order : đặt

Product "1" --> "0..*" CartItem : xuất hiện trong
Product "1" --> "0..*" Comment : nhận
Product "1" --> "0..*" GoodReceipt : được nhập bởi
Product "1" --> "0..*" Post : được tham chiếu bởi

Cart "1" --> "0..*" CartItem : chứa
Order "1" --> "1..*" OrderItem : chứa
Order "1" --> "0..*" OrderTracking : lịch sử
Order "1" --> "1" ShippingInfo : vận chuyển

Category "1" --> "0..*" Product : phân loại
Admin "1" --> "0..*" Category : quản lý
Admin "1" --> "0..*" Report : xem
Chat "1" --> "0..*" Message : chứa